packages/kit/test/apps/basics/src/routes/errors/init-error-endpoint.js
// @ts-expect-error
thisvariableisnotdefined; // eslint-disable-line

export function get() {
	return {
		body: {
			answer: 42
		}
	};
}
